--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "deploy": "node deploy.js --env=live",
+    "deploy:staging": "node deploy.js --env=staging",
     "trigger-build": "curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_2nbdM2HzUpejSxttHjrN2nyrzgkO/T7pWSGKwc5"
   },
   "dependencies": {
@@ -14,7 +16,10 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^10.0.0",
+    "dotenv": "^17.2.1",
     "firebase": "^10.10.0",
+    "fs-extra": "^11.2.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "next": "14.2.5",
@@ -24,13 +29,17 @@
     "react-dom": "^18.3.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tar": "^7.4.3"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "ftp-deploy": "^2.4.4",
+    "node-ssh": "^13.2.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11"
   }
