--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tar": "^7.4.3"
+    "tar": "^7.4.3",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
