--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "postcss": "8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tar": "^7.4.3",
-    "react-google-recaptcha": "^3.1.0"
+    "tar": "^7.4.3"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
