--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "firebase": "^10.10.0",
+    "formik": "^2.4.6",
     "fs-extra": "^11.2.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
@@ -29,11 +30,12 @@
     "postcss": "8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tar": "^7.4.3",
-    "react-google-recaptcha": "^3.1.0"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
