--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "firebase": "^10.10.0",
+    "formik": "^2.4.6",
     "fs-extra": "^11.2.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
@@ -33,7 +34,9 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tar": "^7.4.3"
+    "tar": "^7.4.3",
+    "validator": "^13.15.15",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
