--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "build:staging": "cross-env ENV=staging next build",
     "lint": "next lint",
     "deploy": "node deploy.js --env=live",
