--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ dist-ssr
 /.env.production
 /.env.staging
 deploy.js
+
+# Logo uploads - don't commit to git, but keep folder structure
+/public/websites-logos/*
+!/public/websites-logos/.gitkeep
