--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tar": "^7.4.3",
+    "uuid": "^13.0.0",
     "validator": "^13.15.15",
     "yup": "^1.7.0"
   },
